# wwara_chirp

./: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SAMPLE_WWARA_Chirp-rptrlist-20250416.csv  arrl-csv-to-chirp.py  pyproject.toml  rb_chirp_2410040011.csv  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-blank.md
.github/prompts/: update_mock_chirp_update.md
.github/workflows/: cli-test-published.yml  cli-test-push.yml  cli-test.yml  pypi_workflow.yml  pypi_workflow.yml.not_ready  python-package.yml  update_mock_chirp.yml
docs/: STYLE_GUIDE.md  create_github_issues.py
examples/: rest_api_example.py
sample_files/: WWARA-rptrlist-SAMPLE.csv
scr/: chirp_validator.py
src/: wwara_chirp.py
src/wwara_chirp/: __init__.py  chirpvalidator.py  mock_chirp.py  rest_api.py  update_constants.py  update_mock_chirp.py  update_mock_chirp_const.json  version.py  wwara_chirp.py
src/wwara_chirp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chirp_validator.py  test_rest_api.py  test_update_constants.py  test_update_mock_chirp.py  test_wwara-csv-to-chirp-csv.py  test_wwara_chirp.py  test_wwara_csv_to_chirp_csv.py
tests/test_files/: WWARA-rptrlist-TEST.csv  invalid_input.txt  reference_output.csv  valid_input.csv
wwara-chirp/: .bumpversion.cfg  requirements.txt  wwara_chirp.py
wwara-chirp/scr/: wwara_chirp.py
wwara-chirp/tests/: test_wwara_chirp.py
wwara-csv-to-chirp-csv/: LICENSE.txt  chirp_validator.py  wwara-csv-to-chirp-csv.py  wwara_csv_to_chirp_csv.py  wwwara-csv-to-chirp-csv.py
z_Archive/: test_update_mock_chirp.py
