[project]
name = "wwara-chirp"
version = "2.0.2"
description = "WWARA CHIRP Export Script Update"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tom Sayles (KE4HET)", email = "tsayles@Soot-n-Smoke.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience", # Amateur Radio Operators
    "Topic :: Communications :: Ham Radio",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

keywords = ["WWARA", "CHIRP"]
requires-python = ">=3.10"

[project.urls]
"Bug Reports" = "https://github.com/tsayles/wwara-chirp/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wwara-chirp = "wwara_chirp:main"