[project]
name = "wwara-chirp"
version = "2.0.3"
description = "WWARA CHIRP Export Script Update"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tom Sayles (KE4HET)", email = "tsayles@Soot-n-Smoke.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience", # Amateur Radio Operators
    "Topic :: Communications :: Ham Radio",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "setuptools>=59.6,<77.1",
    "pandas~=2.2.3",
    "numpy~=2.2.4",
    "chirp @ git+https://github.com/kk7ds/chirp.git@master"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pandas",
    "numpy"
]

keywords = ["WWARA", "CHIRP"]
requires-python = ">=3.10"

[project.urls]
"Bug Reports" = "https://github.com/tsayles/wwara-chirp/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wwara_chirp = "wwara_chirp:main"