[project]
name = "wwara-chirp"

version = "2.0.4"

description = "WWARA CHIRP Export Script Update"
readme = "README.md"
license =  "GPL-3.0"
authors = [
    { name = "Tom Sayles (KE4HET)", email = "tsayles@Soot-n-Smoke.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience", # Amateur Radio Operators
    "Topic :: Communications :: Ham Radio",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10,<4" # <4 is a pass through from chirp

dependencies = [
    "setuptools>=59.6,<78.2",
    "pandas~=2.2.3",
    "numpy~=2.2.4",
    "requests>=2.26.0",
    "PyGithub>=1.55.0"

]

keywords = ["WWARA", "CHIRP"]

[project.urls]
"Bug Reports" = "https://github.com/tsayles/wwara-chirp/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
wwara_chirp = "wwara_chirp:main"

[tool.poetry]
name = "wwara-chirp"
version = "2.0.4"
description = "WWARA CHIRP Export Script Update"
authors = ["Tom Sayles (KE4HET) <tsayles@Soot-n-Smoke.com>"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.26.0"
PyGithub = "^1.55.0"
#setuptools = ">=59.6,<77.1"
pandas = "~2.2.3"
numpy = "~2.2.4"

[tool.poetry.dev-dependencies]
pytest = ">=6.0"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pandas",
    "numpy"
]

[tool.poetry.scripts]
wwara_chirp = "wwara_chirp:main"